change HTTP/TLS texts to TCP/TLS, bump version

--- a/IrmaQuicDashboard/Views/Shared/_DashboardPartial.cshtml
+++ b/IrmaQuicDashboard/Views/Shared/_DashboardPartial.cshtml
@@ -32,7 +32,7 @@
     else
     {
         <div>
-            <label>Transport: </label>  <b>HTTP/TLS</b>
+            <label>Transport: </label>  <b>TCP/TLS</b>
         </div>
     }
 
