--- a/IrmaQuicDashboard/Views/Shared/_TotalResultPartial.cshtml
+++ b/IrmaQuicDashboard/Views/Shared/_TotalResultPartial.cshtml
@@ -14,10 +14,10 @@
         <tr>
             <th></th>
             <th>QUIC</th>
-            <th>HTTP/TLS</th>
+            <th>TCP/TLS</th>
             <th>Diff %</th>
             <th>QUIC</th>
-            <th>HTTP/TLS</th>
+            <th>TCP/TLS</th>
             <th>Diff %</th>
         </tr>
         <tr>
